# SCOAP-Analyzer

./: CMakeLists.txt  LICENSE  README.md
src/: Circuit.cpp  Circuit.h  DataStructures.h  FileUtils.h  VerilogParser.h  main.cpp
